Updade view changes

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -38,6 +38,11 @@ main {
     }
 }
 
+.curso-component {
+    .curso-component-title {
+        // font-family: $fontMain;
+    }
+}
 .not-found {
     display: flex;
     flex-wrap: wrap;
